tests/sumo/errors/unknown_vClass/errors.sumo.agg
Warning: 1 total messages of type: Unknown vehicle class '%' ignored.
